# cintillaqt-colors

./: CMakeLists.txt  README.md
src/: LexEditor.cpp  LexEditor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
themes/: Bespin.xml
